--- a/views/index.erb
+++ b/views/index.erb
@@ -1,11 +1,13 @@
 <p>You aren't logged in</p>
 <form action='/login' method='post'>
   <input type='text' name='email' placeholder='Email address'>
+  <input type='password' name='password' placeholder='password'>
   <input type='submit' value='Login'>
 </form>
 
 <p>Create new user</p>
 <form action='/register' method='post'>
   <input type='text' name='email' placeholder='Email address'>
+  <input type='password' name='password' placeholder='password'>
   <input type='submit' value='Register'>
 </form>
