--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 
 <p>Create new user</p>
 <form action='/register' method='post'>
-  <input type='text' name='email' placeholder='Email address'>
-  <input type='password' name='password' placeholder='password'>
+  <input type='text' name='email' placeholder='Email'>
+  <input type='password' name='password' placeholder='Password'>
   <input type='submit' value='Register'>
 </form>
