Add acceptance tests

--- a/views/index.erb
+++ b/views/index.erb
@@ -6,7 +6,7 @@
 </form>
 
 <p>Create new user</p>
-<form action='/register' method='post'>
+<form id="register" action='/register' method='post'>
   <input type='text' name='email' placeholder='Email'>
   <input type='password' name='password' placeholder='Password'>
   <input type='submit' value='Register'>
